# research-agent

./: .gitignore  CLAUDE.md  README.md  app.py  payload.json  pyproject.toml  requirements.txt  research.sh  response.json
.aws-sam/: build.toml
.github/workflows/: ci.yml
docs/: API.md
infrastructure/: template.yaml
src/agent/: researcher.py
src/lambda/: handler.py  requirements.txt
src/tools/: search.py
tests/: conftest.py  test_handler.py  test_researcher.py  test_search.py
